--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:gravity="center_vertical|center_horizontal|center"
             android:layout_width="match_parent"
             tools:ignore="NotSibling"
-            android:text="@string/app_name"
+            android:text=""
             android:textSize="18sp"
             android:textStyle="normal|bold"
             android:textColor="?android:attr/textColorPrimaryInverse"
@@ -46,7 +46,7 @@
             android:gravity="center_vertical|center_horizontal|center"
             android:layout_width="match_parent"
             tools:ignore="NotSibling"
-            android:text="@string/mgks_promo"
+            android:text=""
             android:textSize="18sp"
             android:textStyle="normal|bold"
             android:textColor="?android:attr/textColorPrimaryInverse"
